k8s/redis/ha/replica/service-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-replica-service
  namespace: session-database
  labels:
    app: redis-replica
    component: ha
spec:
  selector:
    app: redis-replica
    component: ha
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: ${REPLICA_NODEPORT}
      name: redis
  type: NodePort
